@@ -162,6 +162,8 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/Rect.html#clamp>Rect.clamp</a> - move rectangle inside another<br>
 <a href=ref/Rect.html#clamp_ip>Rect.clamp_ip</a> - moves the rectangle inside another<br>
 <a href=ref/Rect.html#clip>Rect.clip</a> - rectangle cropped inside another<br>
+<a href=ref/Rect.html#collidedict>Rect.collidedict</a> - find overlapping rectangle in a dictionary<br>
+<a href=ref/Rect.html#collidedictall>Rect.collidedictall</a> - find all overlapping rectangles<br>
 <a href=ref/Rect.html#collidelist>Rect.collidelist</a> - find overlapping rectangle<br>
 <a href=ref/Rect.html#collidelistall>Rect.collidelistall</a> - find all overlapping rectangles<br>
 <a href=ref/Rect.html#collidepoint>Rect.collidepoint</a> - point inside rectangle<br>
